# physical-informed-neural-network

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
artifacts/burgers_pinn/: observations.csv  predictions.csv  summary.json  training_history.csv
notebooks/: burgers_equation_pinn.ipynb  kolmogorov_arnold_networks_burgers.ipynb  neural_operator_function_spaces.ipynb
src/physical_informed_neural_network/: __init__.py  data.py  model.py  physics.py  pipeline.py  plotting.py  schemas.py  training.py  utils.py
src/physics_informed_neural_network/: __init__.py  __main__.py  cli.py  config.py  data.py  model.py  physics.py  pipeline.py  plotting.py  presets.py  schemas.py  training.py  utils.py
src/physics_informed_neural_network/kan/: __init__.py  config.py  data.py  model.py  pipeline.py  plotting.py  presets.py  schemas.py  training.py
src/physics_informed_neural_network/neural_operator/: __init__.py  config.py  data.py  data_2d.py  model.py  model_2d.py  pipeline.py  pipeline_2d.py  plotting.py  plotting_2d.py  presets.py  schemas.py  training.py  training_2d.py
tests/: conftest.py  test_cli.py  test_config.py  test_darcy.py  test_data.py  test_kan.py  test_model.py  test_neural_operator.py  test_physics.py  test_pipeline_smoke.py  test_plotting_and_presets.py  test_utils.py
tools/: evaluate_quality.py  generate_kan_notebook.py  generate_neural_operator_notebook.py  generate_notebook.py
