[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physics-informed-neural-network"
version = "0.1.0"
description = "Structured PyTorch implementation of a physics-informed neural network for the 1-D viscous Burgers equation."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
keywords = ["pinn", "physics-informed-neural-networks", "burgers-equation", "pytorch", "scientific-computing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "ipython>=9.10.0",
    "matplotlib>=3.10",
    "nbformat>=5.10",
    "numpy>=1.26,<2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "numpy>=1.26; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "pandas>=2.2",
    "pydantic>=2.12",
    "scipy>=1.12",
    "torch>=2.2,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[project.scripts]
burgers-pinn = "physics_informed_neural_network.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["physics_informed_neural_network*"]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
